language/move-lang/tests/move_check/expansion/duplicate_module.exp
error: 

   ┌── tests/move_check/expansion/duplicate_module.move:1:8 ───
   │
 1 │ module M {}
   │        - Previously defined here
 2 │ module M {}
   │        ^ Duplicate definition for module '0x8675309::M'
   │

